gitops/base/pipeline/triggers/eventlistener.yaml
# Route OpenShift pour exposer le webhook publiquement
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-github-webhook
  namespace: keycloak
  annotations:
    haproxy.router.openshift.io/timeout: 2m
spec:
  to:
    kind: Service
    name: el-keycloak-github-webhook
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
